2011-07-29	Jennifer Averett <Jennifer.Averett@OARcorp.com>

	* smp01/init.c, smp02/init.c, smp02/tasks.c, smp03/init.c,
	smp03/tasks.c, smp04/Makefile.am, smp04/init.c, smp05/init.c,
	smp06/init.c, smp07/init.c, smp08/init.c: Cleaned up tests and fixed
	some print statement problems.
	* smp04/tasks.c: Removed.

2011-06-29	Joel Sherrill <joel.sherrill@oarcorp.com>

	* smp01/smp01.doc, smp02/smp02.doc, smp03/smp03.doc, smp04/smp04.doc,
	smp05/smp05.doc, smp07/smp07.doc, smp08/smp08.doc, smp08/system.h,
	smp08/tasks.c: Update copyright.

2011-06-29	Joel Sherrill <joel.sherrill@oarcorp.com>

	* .cvsignore: New file.

2011-06-28	Joel Sherrill <joel.sherrill@oarcorp.com>

	* .configure.ac.swp, ChangeLog, Makefile.am, README, config.h.in,
	configure.ac, smp01/.cvsignore, smp01/Makefile.am, smp01/init.c,
	smp01/smp01.doc, smp01/smp01.scn, smp01/system.h, smp01/tasks.c,
	smp02/.cvsignore, smp02/Makefile.am, smp02/init.c, smp02/smp02.doc,
	smp02/smp02.scn, smp02/system.h, smp02/tasks.c, smp03/.cvsignore,
	smp03/Makefile.am, smp03/init.c, smp03/smp03.doc, smp03/smp03.scn,
	smp03/system.h, smp03/tasks.c, smp04/.cvsignore, smp04/Makefile.am,
	smp04/init.c, smp04/smp04.doc, smp04/smp04.scn, smp04/system.h,
	smp04/tasks.c, smp05/.cvsignore, smp05/Makefile.am, smp05/init.c,
	smp05/smp05.doc, smp05/smp05.scn, smp06/.cvsignore,
	smp06/Makefile.am, smp06/init.c, smp06/smp06.doc, smp06/smp06.scn,
	smp07/.cvsignore, smp07/Makefile.am, smp07/init.c, smp07/smp07.doc,
	smp07/smp07.scn, smp08/.cvsignore, smp08/Makefile.am, smp08/init.c,
	smp08/smp08.doc, smp08/smp08.scn, smp08/system.h, smp08/tasks.c,
	smp09/.cvsignore, smp09/Makefile.am, smp09/init.c, smp09/smp09.doc,
	smp09/smp09.scn: New files.
